src/test/ui/let-else/let-else-allow-unused.stderr
error: unused variable: `unused`
  --> $DIR/let-else-allow-unused.rs:13:14
   |
LL |     let Some(unused) = value else { return };
   |              ^^^^^^ help: if this is intentional, prefix it with an underscore: `_unused`
   |
note: the lint level is defined here
  --> $DIR/let-else-allow-unused.rs:5:8
   |
LL | #[deny(unused_variables)]
   |        ^^^^^^^^^^^^^^^^

error: aborting due to previous error

